Building domain entities